"attempt to fix the CI failures #3